--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miss-bug-proj",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "directories": {
     "lib": "lib"
