--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "cookie-parser": "^1.4.7",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "pdfkit": "^0.15.0"
   }
 }
