--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "dev": "nodemon --ignore \"./data\" server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "nodemon": "^3.1.7",
     "pdfkit": "^0.15.0"
   }
 }
