--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "cryptr": "^6.3.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "pdfkit": "^0.15.0"
